--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,21 @@
-{    
-    "version": "0.2.0",
-    "configurations": [
-    
 {
-  "name": "Launch Chrome localhost",
-  "type": "chrome",
-  "request": "launch",
-  "port": 9205,
-  "webRoot": "${workspaceFolder}",
-  "url": "http://localhost:8080/Udemy_Servlets_JSPs/index.lecture10.html"
-}]
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "Launch Chrome localhost",
+			"type": "chrome",
+			"request": "launch",
+			"port": 9205,
+			"webRoot": "${workspaceFolder}",
+			"url": "http://localhost:8080/Udemy_Servlets_JSPs/index.lecture10.html"
+		},
+		{
+			"name": "Launch Chrome localhost (1)",
+			"type": "chrome",
+			"request": "launch",
+			"port": 9243,
+			"webRoot": "${workspaceFolder}",
+			"url": "http://localhost:8080/Udemy_Servlets_JSPs/index.lecture10.contador.html"
+		}
+	]
 }
